@@ -48,7 +48,7 @@ int ti85_send_VAR(uint16_t varsize, uint8_t vartype, char *varname)
   uint8_t buffer[16];
   uint8_t trans[9];
 
-  tifiles_translate_varname(varname, trans, vartype);
+  tifiles_translate_varname(varname, (char*)trans, vartype);
   printl2(0, " PC->TI: VAR (size=0x%04X=%i, id=%02X, name=<%s>)\n",
 	  varsize, varsize, vartype, trans);
 
@@ -150,7 +150,7 @@ int ti85_send_REQ(uint16_t varsize, uint8_t vartype, char *varname)
   uint8_t buffer[16] = { 0 };
   uint8_t trans[9];
 
-  tifiles_translate_varname(varname, trans, vartype);
+  tifiles_translate_varname(varname, (char*)trans, vartype);
   printl2(0, " PC->TI: REQ (size=0x%04X=%i, id=%02X, name=<%s>)\n",
 	  varsize, varsize, vartype, trans);
 
@@ -178,7 +178,7 @@ int ti85_send_RTS(uint16_t varsize, uint8_t vartype, char *varname)
   uint8_t buffer[16];
   uint8_t trans[9];
 
-  tifiles_translate_varname(varname, trans, vartype);
+  tifiles_translate_varname(varname, (char*)trans, vartype);
   printl2(0, " PC->TI: RTS (size=0x%04X=%i, id=%02X, name=<%s>)\n",
 	  varsize, varsize, vartype, trans);
 
@@ -222,7 +222,7 @@ int ti85_recv_VAR(uint16_t * varsize, uint8_t * vartype, char *varname)
     memcpy(varname, buffer + 3, 8);
   }
 
-  tifiles_translate_varname(varname, trans, *vartype);
+  tifiles_translate_varname(varname, (char*)trans, *vartype);
   printl2(0, " (size=0x%04X=%i, id=%02X, name=<%s>)",
 	  *varsize, *varsize, *vartype, trans);
   printl2(0, ".\n");
@@ -326,7 +326,7 @@ int ti85_recv_RTS(uint16_t * varsize, uint8_t * vartype, char *varname)
   memcpy(varname, buffer + 4, strl);
   varname[strl] = '\0';
 
-  tifiles_translate_varname(varname, trans, *vartype);
+  tifiles_translate_varname(varname, (char*)trans, *vartype);
   printl2(0, " (size=0x%04X=%i, id=%02X, name=<%s>)",
 	  *varsize, *varsize, *vartype, trans);
   printl2(0, ".\n");
