@@ -68,7 +68,7 @@ int ti89_send_VAR(uint32_t varsize, uint8_t vartype, char *varname)
   uint8_t trans[32];
   uint8_t extra = (vartype == TI9X_BKUP) ? 0 : 1;
 
-  tifiles_translate_varname(varname, trans, vartype);
+  tifiles_translate_varname(varname, (char*)trans, vartype);
   printl2(0, " PC->TI: VAR (size=0x%08X=%i, id=%02X, name=<%s>)\n",
 	  varsize, varsize, vartype, trans);
 
