@@ -27,7 +27,7 @@
 #include <stdio.h>
 #include <string.h>
 #include <stdlib.h>
-//#include <unistd.h>
+#include <unistd.h>
 
 #include "gettext.h"
 
@@ -131,7 +131,7 @@ int ti85_recv_backup(const char *filename, int mask_mode)
   sprintf(update->label_text, _("Waiting for backup..."));
   update_label();
 
-  TRYF(ti85_recv_VAR(&(content->data_length1), &content->type, varname));
+  TRYF(ti85_recv_VAR(&(content->data_length1), &content->type, (char*)varname));
   content->data_length2 = varname[0] | (varname[1] << 8);
   content->data_length3 = varname[2] | (varname[3] << 8);
   content->mem_address = varname[4] | (varname[5] << 8);
@@ -191,7 +191,7 @@ int ti85_send_backup(const char *filename, int mask_mode)
   varname[3] = MSB(content.data_length3);
   varname[4] = LSB(content.mem_address);
   varname[5] = MSB(content.mem_address);
-  TRYF(ti85_send_VAR(content.data_length1, TI85_BKUP, varname));
+  TRYF(ti85_send_VAR(content.data_length1, TI85_BKUP, (char*)varname));
   TRYF(ti85_recv_ACK(&status));
 
   sprintf(update->label_text, _("Waiting user's action..."));
